--- a/app/globals.css
+++ b/app/globals.css
@@ -1,15 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Serif:opsz,wght@8..144,100;8..144,200;8..144,300;8..144,400;8..144,500;8..144,600;8..144,700;8..144,800;8..144,900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Inter+Tight:wght@100;200;300;400;500;600;700;800;900&display=swap');
-
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  border: 0;
-  text-decoration: none;
-  outline: 0;
-}
+/* @import url('https://fonts.googleapis.com/css2?family=Roboto+Serif:opsz,wght@8..144,100;8..144,200;8..144,300;8..144,400;8..144,500;8..144,600;8..144,700;8..144,800;8..144,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter+Tight:wght@100;200;300;400;500;600;700;800;900&display=swap'); */
 
 :root {
   --container-width-lg: 90%;
@@ -17,38 +7,75 @@
   --container-width-sm: 90%;
 }
 
-img {
-  width: auto;
-  height: auto;
-}
-
-ul,
-li,
-figure {
-  margin: 0 !important;
-  padding: 0 !important;
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 
 html,
 body {
+  max-width: 100vw;
+  font-size: 16px;
+  line-height: 24px;
+  color: var(--black);
+  font-family: var(--font-interTight);
   overflow-x: hidden;
-  font-family: 'Roboto Serif', serif;
 }
-html {
-  scroll-behavior: smooth;
+
+img {
+  width: 100%;
+  height: 100%;
 }
 
 button {
-  cursor: pointer;
+  background: transparent;
+  border: none;
 }
 
 a {
+  color: inherit;
+  margin: 0;
+  padding: 0;
   text-decoration: none !important;
+  transition: all 0.3s ease-in-out;
   color: #323232;
 }
 
 a:hover {
   color: inherit;
+  transition: all 0.3s ease-in-out;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+hgroup,
+p,
+figure,
+small,
+address {
+  margin: 0;
+  padding: 0;
+}
+
+ul,
+li {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+h1 {
+  font-family: var(--font-robotoSerif);
+  font-weight: 700 !important;
 }
 
 .container {
