--- a/components/HomeComps/dolani.css
+++ b/components/HomeComps/dolani.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   gap: 61px;
-  background-image: url(/dolaniBg.svg);
+  background-image: url('../../public/dolaniBg.svg');
   width: 100%;
   height: 100%;
   /* background-size: cover; */
@@ -13,7 +13,7 @@
 .container-dolani img {
   /* width: 100%; */
   width: 416px;
-  /* height: 404.538px; */
+  height: auto;
 }
 .dL {
   padding-left: 80px;
@@ -71,5 +71,9 @@
     margin: 0 auto;
     padding-left: 0;
     padding-bottom: 0;
+  }
+
+  .dolas {
+    background-image: url('');
   }
 }
