--- a/components/HomeComps/insurance.css
+++ b/components/HomeComps/insurance.css
@@ -42,6 +42,11 @@
   gap: 20px;
   padding-bottom: 45px;
 }
+
+.iIcons img {
+  width: 20%;
+}
+
 .check {
   height: 56px;
   padding: 12px 24px;
@@ -52,4 +57,10 @@
   font-size: 16px;
   font-weight: 500;
   line-height: 21px;
+}
+
+@media screen and (max-width: 768px) {
+  .iIcons img {
+    width: 30%;
+  }
 }
