--- a/components/footer.css
+++ b/components/footer.css
@@ -25,6 +25,7 @@ footer {
   font-weight: 600;
   padding-bottom: 16px;
 }
+
 footer h5 {
   color: var(--Light-Gray-300, #cccfd6);
   font-family: Inter Tight;
@@ -75,4 +76,8 @@ footer h5 {
 .copy {
   display: flex;
   justify-content: center;
+}
+
+.icons img {
+  width: 10%;
 }
