--- a/components/footer.css
+++ b/components/footer.css
@@ -20,7 +20,6 @@ footer {
 }
 .container-footer h3 {
   color: var(--Color, #fff);
-  font-family: Inter Tight;
   font-size: 16px;
   font-weight: 600;
   padding-bottom: 16px;
@@ -28,11 +27,11 @@ footer {
 
 footer h5 {
   color: var(--Light-Gray-300, #cccfd6);
-  font-family: Inter Tight;
   font-size: 14px;
   font-weight: 400;
   line-height: 130%;
   padding-bottom: 16px;
+  margin: 1em 0 !important;
 }
 .container-footer h6 {
   color: var(--Light-Gray-300, #cccfd6);
