--- a/app/globals.css
+++ b/app/globals.css
@@ -5,6 +5,7 @@
   --container-width-lg: 90%;
   --container-width-md: 86%;
   --container-width-sm: 90%;
+  --secColor: #e66926;
 }
 
 * {
@@ -78,16 +79,42 @@ h1 {
   font-weight: 700 !important;
 }
 
+p {
+  font-size: 1.3rem;
+  font-weight: 300;
+}
+
+label {
+  font-size: 0.8rem;
+  font-weight: 300;
+}
+
+input::placeholder {
+  font-size: 10px;
+  font-weight: 400;
+  color: #7e8494 !important;
+}
+
+.main-btn {
+  border-radius: 30px;
+  background: var(--secColor);
+  padding: 0.8em 1.3em;
+  color: #fff;
+}
+
 .container {
   width: var(--container-width-lg);
   margin: 0 auto;
 }
 
+.isActive {
+  border-bottom: solid 2px var(--secColor);
+}
+
 .isActive a {
-  color: #323232;
-  font-family: Inter Tight;
+  color: var(--secColor);
   font-size: 16px;
-  font-weight: 500;
+  font-weight: 700;
 }
 
 .notActive a {
@@ -122,15 +149,15 @@ h1 {
 
   .isActive,
   .notActive {
-    padding: 0.5em 1em !important;
+    padding: 0.5em 1em;
   }
 
   h1 {
-    font-size: 2rem !important;
+    font-size: 2rem;
   }
 
   p {
-    font-size: 0.9rem !important;
+    font-size: 0.9rem;
   }
 }
 
