--- a/app/globals.css
+++ b/app/globals.css
@@ -171,3 +171,9 @@ input::placeholder {
   opacity: 0.5;
   pointer-events: none;
 }
+
+.cards {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 18px;
+}
