--- a/components/footer.module.css
+++ b/components/footer.module.css
@@ -24,7 +24,7 @@
   padding-bottom: 16px;
 }
 
-.footer h5 {
+.footer a {
   color: var(--Light-Gray-300, #cccfd6);
   font-size: 14px;
   font-weight: 400;
@@ -66,7 +66,6 @@
 }
 .copy p {
   color: var(--Light-Gray-300, #cccfd6);
-  font-family: 'Inter Tight';
   font-size: 16px;
   font-weight: 400;
   line-height: 130%; /* 20.8px */
