--- a/components/footer.module.css
+++ b/components/footer.module.css
@@ -30,7 +30,15 @@
   font-weight: 400;
   line-height: 130%;
   padding-bottom: 16px;
+  margin: 2em 0 !important;
+}
+
+.footer ul li {
   margin: 1em 0 !important;
+}
+
+.footer a:hover {
+  color: var(--secColor);
 }
 .containerFooter h6 {
   color: var(--Light-Gray-300, #cccfd6);
