--- a/app/globals.css
+++ b/app/globals.css
@@ -78,9 +78,10 @@ html {
 }
 
 h1 {
-  font-size: 4rem;
+  font-size: 3.3rem;
   font-family: var(--font-robotoSerif);
   font-weight: 700 !important;
+  letter-spacing: -2px;
 }
 
 p,
@@ -177,4 +178,8 @@ input::placeholder {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   gap: 18px;
+}
+
+hr {
+  border: solid 1px grey;
 }
