--- a/app/insurance/Insurance.module.scss
+++ b/app/insurance/Insurance.module.scss
@@ -16,6 +16,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    align-items: center;
     gap: 20px;
     padding-bottom: 45px;
   }
