--- a/components/HomeComps/insurance.module.css
+++ b/components/HomeComps/insurance.module.css
@@ -39,12 +39,13 @@
 .iIcons {
   display: flex;
   flex-wrap: wrap;
+  align-items: center;
   gap: 20px;
   padding-bottom: 45px;
 }
 
 .iIcons img {
-  width: 20%;
+  width: 30%;
 }
 
 .check {
