--- a/components/footer.module.css
+++ b/components/footer.module.css
@@ -29,8 +29,8 @@
   font-size: 14px;
   font-weight: 400;
   line-height: 130%;
-  padding-bottom: 16px;
-  margin: 2em 0 !important;
+  /* padding-bottom: 16px;
+  margin: 2em 0 !important; */
 }
 
 .footer ul li {
